<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layoutBookInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:orientation="horizontal">

        <com.thurainx.libraryapp.views.components.RoundedImageView
            android:id="@+id/ivBookInfoCover"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:scaleType="centerCrop"
            app:cornerRadius="@dimen/margin_small"
            app:srcCompat="@drawable/dummy_book" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_medium"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBookInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/lbl_dummy"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBookInfoSampleEbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Sample - Ebook"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/text_regular" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey_30percent"
        android:layout_marginTop="@dimen/margin_medium_2" />

    <LinearLayout
        android:id="@+id/layoutRemoveDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            app:srcCompat="@drawable/ic_remove_circle"
            android:tint="@color/light_grey"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_remove_download"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_regular_2x" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRemoveFromLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            app:srcCompat="@drawable/ic_delete"
            android:tint="@color/light_grey"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_delete_from_your_library"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_regular_2x" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddToWishList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            app:srcCompat="@drawable/ic_wish_list"
            android:tint="@color/light_grey"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Add to wish list"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_regular_2x" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutAddToShelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            app:srcCompat="@drawable/ic_add"
            android:tint="@color/light_grey"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Add to shelf"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_regular_2x" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAboutTheBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            app:srcCompat="@drawable/ic_book"
            android:tint="@color/light_grey"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_about_this_ebook"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_regular_2x" />


    </LinearLayout>





</LinearLayout>