<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.YourShelvesFragment">

    <include
        android:id="@+id/layoutEmptyShelfList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        layout="@layout/view_empty_bookshelf" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShelves"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_medium_2"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="12"
        tools:listitem="@layout/view_holder_shelf" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateShelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:paddingHorizontal="@dimen/margin_large"
        android:paddingVertical="@dimen/margin_medium_2"
        android:text="@string/lbl_create_new"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/margin_large"
        app:icon="@drawable/ic_pencil"
        app:iconPadding="@dimen/margin_medium_2"
        app:iconSize="@dimen/margin_medium_3" />


</RelativeLayout>