...
        android:layout_height="@dimen/margin_xlarge"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_chevron_left" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreateShelfName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivCreateShelfClose"
        android:layout_alignBottom="@id/ivCreateShelfClose"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
...
        app:boxStrokeColor="@color/search_box_stroke_color"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtShelfName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/lbl_shelf_name"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/text_heading_1x"
...
